backend logic updation and functionality made work